style.css
/*
Theme Name: SelfPressed
Theme URI: http://github.com/DArtagan/SelfPressed
Description: A child theme of Roots aimed at making a good self-promotion site
Author: William Weiskopf
Author URI: http://worldwidewilly.net
Template: roots
*/

html, body {
  height: 100%;
  margin: 0px;
  padding: 0px !important;
  width: 100%;
}

#pageBackground {
  height: 100%;
  background-attachment: fixed;
  background-position: center center;
  background-repeat: none;
  background-size: cover;
  position: fixed;
  width: 100%;
  z-index: -10;
}

html.lt-ie9 #pageBackground {
  display: none;
}

#leftRule {
  background: #2c2c2c;
  box-shadow: 0px 0px 4px #2c2c2c;
  float: left;
  height: 100%;
  margin-bottom: -150px;
  position: fixed;
  width: 30px;
}

#topBanner {
  height: 25%;
  width: 100%;
  display: none;
}

#banner {
  float: left;
  top: 20%;
  left: 0px;
  position: fixed;
  width: 225px;
}

#banner div.navbar-inner {
  background-image: none;
  border-bottom: 3px solid #EF5F00;
  border-radius: 0px;
  box-shadow: 3px 2px 3px rgba(0, 0, 0, 0.25), 0 -1px 0 rgba(0, 0, 0, 0.1) inset;
  margin-left: 30px;
  padding: 0px 0px 0px 10px;
}

#nav-main ul {
  width: 100%;
}

#nav-main li {
  float: none;
  margin-left: -10px;
}

#nav-main li a {
  padding-left: 20px;
}

#nav-main li.active ul.dropdown-menu {
  border-radius: 0px;
  float: none;
  display: block;
  margin-left: 5px;
  position: relative;
  top: 0px;
}

#nav-main li.active ul.dropdown-menu:before {
  display:none;
}

#nav-main li.active ul.dropdown-menu:after {
  display:none;
}

#superWrap {
  height: 100%;
  margin-bottom: -150px;
  width: 100%;
}

#wrap {
  margin: 0px 50px 0px 275px;
  width: auto;
}

#content {
  -moz-transition: all 0.8s ease-in-out 0s;
  width: 100%;
}

.wrap-collapse #content {
  margin-left: -200%;
}

#wrap > div.row:before, #wrap > div.row:after {
  display: inline
}

#main {
  float: left;
  padding-top: 20px;
}

#sidebar {
  margin-top: 85px;
}

body.page #sidebar {
  display: none;
}

.push {
  height: 150px;
}

footer#content-info {
  height: 50px;
  margin: 44px 40px 0px 70px;
  padding: 25px 0px 30px;
  width: auto;
}

